refactoring best practice
